# atlas-genesis-fe2efd70

./: .env  .env.example  .env.production  .eslint-baseline.json  .gitignore  .lighthouserc.json  .prettierignore  .prettierrc  00_START_HERE.md  ACCESSIBILITY_CHECKLIST.md  ACCESSIBILITY_TESTING_GUIDELINES.md  AI_DOMAINS_COMPREHENSIVE_EXPLORATION.md  API_DOCUMENTATION.md  ARCHITECTURE.md  ATLAS_IMPROVEMENTS.md  ATLAS_SANCTUM_COMPLETE_IMPLEMENTATION_ROADMAP.md  AUTHORS.md  AZURE_DEPLOYMENT_GUIDE.md  BILLING_SETUP_GUIDE.md  BLUE_GREEN.md  BUILD_OUT_SUMMARY.md  CHANGELOG.md  CITATION.cff  CLOUD_INFRASTRUCTURE.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLETION_CHECKLIST.md  COMPLETION_STATUS.md  CONTRIBUTING.md  CORRECTED_INTEGRATION_STEPS.md  CRITICAL_VS_OPTIONAL_COMPONENTS.md  DATABASE_ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEVELOPER_CHECKLIST.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.production  EARTH2STUDIO_INSTALLATION_GUIDE.md  ECOSYSTEM_INNOVATION_ROADMAP.md  ENHANCED_AUTHENTICATION_MODULE.md  (+96 more)
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.husky/: pre-commit
EthosDAO/: PRODUCTION_SUMMARY.md  nginx.conf  (+1 more)
atlas-sanctum-earth2studio/: INTEGRATION_GUIDE.md  README.md  main.py  pyproject.toml
atlas-sanctum-earth2studio/atlas_sanctum/: __init__.py
atlas-sanctum-earth2studio/atlas_sanctum/config/: __init__.py  manager.py
atlas-sanctum-earth2studio/atlas_sanctum/conscience/: __init__.py  core.py
atlas-sanctum-earth2studio/atlas_sanctum/gpu/: __init__.py  verifier.py
atlas-sanctum-earth2studio/atlas_sanctum/integration/: __init__.py  engine.py
(+1414 files in other folders)
