[project]
name = "atlas-sanctum-earth2studio"
version = "0.1.0"
description = "Atlas Sanctum Earth2Studio Integration - Planetary Conscience for AI Earth System Models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earth2studio",
]

[tool.uv.sources]
earth2studio = { git = "https://github.com/NVIDIA/earth2studio.git", rev = "0.12.1" }

[project.scripts]
atlas-sanctum = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atlas_sanctum"]
